--- a/styles2.css
+++ b/styles2.css
@@ -7,7 +7,7 @@ h2 span {font-size: 1.4rem; font-weight: normal}
 p {color: #002D62; font-size: 1.2rem; line-height: 20px;}
 
 select.theme.form-control {width:auto}
-a {font-weight: bold; color: #236FDC; text-decoration: none;}
+a {font-weight: bold; color: #236FDC; text-decoration: none; cursor: pointer;}
 a:hover {color: #002D62; text-decoration: underline;}
 
 
@@ -17,9 +17,13 @@ a:hover {color: #002D62; text-decoration: underline;}
 
 label.delegatelabel {padding-left: 5px;}
 label {padding: 0 15px 0 15px; font-size: 1.4rem;}
-.noleftpad label{padding: 0 0px 0 15px;}
+.noleftpad label{padding: 0 0 0 0;}
+.noleftpad label.Nichelabel {padding:0 15px 0 5px; font-size: 1.2rem; vertical-align: top;}
+.nichebox {padding-left:15px;}
+.ClientsSlide {height:50px;}
 
-.parentdivborder {border: 1px solid #DDD9D5;}
+
+.parentdivborder {border: 1px solid #DDD9D5;width:100%}
 .parentdivborder a {font-size:1.3rem}
 .pad span {font-size: 1.3rem;}
 .pad div{padding-bottom: 15px;padding-top: 15px;}
@@ -35,7 +39,10 @@ select.Affiliation {width: 70%;margin-right: 5px;}
 .templateparent div.templateparentthead {center; color: white; background: #002D62;}
 .themeparent select.theme {margin-left: 10px;margin-bottom: 10px;}
 
+.teamparent label {padding: 0 0 0 0; }
 .teamparent .textField {width: 25%; display:inline-block;margin-right: 5px;}
+.teamparent .TeamContact {margin-left:75px;}
+.teamparent .teamdelegate {width:75px;margin-left:15px}
 .textField {width: 70%; display:inline-block;margin-right: 5px;}
 #question {width:25%}
 [name|="Number"] {width: 25%; display:inline-block}
@@ -52,3 +59,8 @@ p#notforclients {font-size: 1rem; font-weight: bold; color: #FFFFFF; text-align:
 .ui-datepicker table {font-size: 1.5em;}
 #ui-datepicker-div {width:auto}
 .form-control {display: inline-block;}
+
+.glyphicon-menu-right:before {
+    font-size:1.4rem;
+    
+}
